--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,9 +129,10 @@
     <ul class='item-lists'>
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to "#" do %>
           <div class='item-img-content'>
+            <%= link_to item_path(item.id) do %>
             <%= image_tag item.image, class: "item-img" %>
+            <% end %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
             <div class='sold-out'>
@@ -152,7 +153,6 @@
             </div>
           </div>
         </div>
-        <% end %>
       <% end %>
         </li>
 
