--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,10 +135,12 @@
             <% end %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
+          <% if item.order.present? %>
             <div class='sold-out'>
               <span>Sold Out!!</span>
             </div>
           <%# //商品が売れていればsold outを表示しましょう %>
+          <% end %>
 
           </div>
         <div class='item-info'>
